Fix partners on mobile, fix nav bar for mobile

--- a/app/assets/stylesheets/elements/_nav.mobile.scss
+++ b/app/assets/stylesheets/elements/_nav.mobile.scss
@@ -14,13 +14,10 @@
         }
 
         .menu #logo {
-            width: auto;
-
             img {
                 margin-right: 1em
             }
         }
-
 
         #submenu {
             background: $white;
