--- a/app/assets/stylesheets/elements/_nav.scss
+++ b/app/assets/stylesheets/elements/_nav.scss
@@ -24,6 +24,7 @@
     .row {
         display: flex;
         height: 4em;
+        padding: 0;
     }
 
     .menu {
